--- a/public/locale/en/translation.json
+++ b/public/locale/en/translation.json
@@ -14,6 +14,10 @@
 
   "Top Articles": "Top Articles",
 
+  "talk with us":"Talk with us",
+
+
+
   "contact_us": "Contact Us",
   "email_placeholder": "Email",
   "email_description": "Please enter your email address to receive our latest news and updates.",
