feat: enhance support and solutions pages with new components, translations, and form validation

--- a/public/locale/ar/translation.json
+++ b/public/locale/ar/translation.json
@@ -14,9 +14,8 @@
 
   "Top Articles": "أهم المقالات",
 
-  "talk with us":"تحدث معنا",
-
-
+  "talk with us": "تحدث معنا",
+  "how can we help": "كيف نساعدك؟",
 
   "contact_us": "تواصل معنا",
   "email_placeholder": "البريد الإلكتروني",
