--- a/public/locale/en/translation.json
+++ b/public/locale/en/translation.json
@@ -14,9 +14,8 @@
 
   "Top Articles": "Top Articles",
 
-  "talk with us":"Talk with us",
-
-
+  "talk with us": "Talk with us",
+  "how can we help": "how can we help?",
 
   "contact_us": "Contact Us",
   "email_placeholder": "Email",
