--- a/public/locale/en/translation.json
+++ b/public/locale/en/translation.json
@@ -65,6 +65,8 @@
     "read more":"read more"
   },
 
+  "solution details": "Solution details",
+
   "why are we special": "What Sets Us Apart",
 
   "contact_us": "Contact Us",
