Refactor code structure for improved readability and maintainability

--- a/public/locale/ar/translation.json
+++ b/public/locale/ar/translation.json
@@ -29,7 +29,8 @@
     "projectsLabel": "مشروع",
     "clientsCount": "+6,561",
     "clientsLabel": "عملاء راضون",
-    "aboutImageAlt": "عن شركة تميز"
+    "aboutImageAlt": "عن شركة تميز",
+    "MoreThanOneHundredBrands": "أكثر من 100 علامه تجاريه تثق بنا"
   },
 
   "Top Articles": "أهم المقالات",
