--- a/public/locale/en/translation.json
+++ b/public/locale/en/translation.json
@@ -27,7 +27,8 @@
     "projectsLabel": "Project",
     "clientsCount": "+6,561",
     "clientsLabel": "Satisfied Clients",
-    "aboutImageAlt": "About Tamayuz Company"
+    "aboutImageAlt": "About Tamayuz Company",
+    "MoreThanOneHundredBrands": "More than 100 brands trust us"
   },
 
   "Top Articles": "Top Articles",
