feat: add service details page with dynamic content and styling enhancements

--- a/public/locale/ar/translation.json
+++ b/public/locale/ar/translation.json
@@ -33,6 +33,8 @@
     "MoreThanOneHundredBrands": "أكثر من 100 علامه تجاريه تثق بنا"
   },
 
+  "serviceDetails":"تفاصيل الخدمة",
+
   "Top Articles": "أهم المقالات",
 
   "article details": "تفاصيل المقال",
