--- a/public/locale/en/translation.json
+++ b/public/locale/en/translation.json
@@ -31,6 +31,8 @@
     "MoreThanOneHundredBrands": "More than 100 brands trust us"
   },
 
+  "serviceDetails":"service details",
+
   "Top Articles": "Top Articles",
 
   "talk with us": "Talk to Us",
