--- a/public/locale/ar/translation.json
+++ b/public/locale/ar/translation.json
@@ -30,10 +30,14 @@
     "clientsCount": "+6,561",
     "clientsLabel": "عملاء راضون",
     "aboutImageAlt": "عن شركة تميز",
-    "MoreThanOneHundredBrands": "أكثر من 100 علامه تجاريه تثق بنا"
+    "MoreThanOneHundredBrands": "أكثر من 100 علامه تجاريه تثق بنا",
+    "what are we doing?": "ما نقوم به؟",
+    "what are we doing?_desc": "توفير حلول وتطوير أداء خدمة العملاء بأنشاء مراكز اتصال مزودة بالتقنيات العالمية والخدمات السحابية المتطورة للمؤسسات والشركات ونظام الاتصال السحابي",
+    "follow our newest articles": "تابع أحدث مقالاتنا",
+    "keep in touch with us":"أبق على تواصل معنا"
   },
 
-  "serviceDetails":"تفاصيل الخدمة",
+  "serviceDetails": "تفاصيل الخدمة",
 
   "Top Articles": "أهم المقالات",
 
