Refactor code structure for improved readability and maintainability

--- a/public/locale/ar/translation.json
+++ b/public/locale/ar/translation.json
@@ -34,7 +34,9 @@
     "what are we doing?": "ما نقوم به؟",
     "what are we doing?_desc": "توفير حلول وتطوير أداء خدمة العملاء بأنشاء مراكز اتصال مزودة بالتقنيات العالمية والخدمات السحابية المتطورة للمؤسسات والشركات ونظام الاتصال السحابي",
     "follow our newest articles": "تابع أحدث مقالاتنا",
-    "keep in touch with us":"أبق على تواصل معنا"
+    "keep in touch with us": "أبق على تواصل معنا",
+    "Testimonials": "التقييمات",
+    "Some of our customer testimonials": "بعض تقييمات عملائنا"
   },
 
   "serviceDetails": "تفاصيل الخدمة",
