--- a/public/locale/en/translation.json
+++ b/public/locale/en/translation.json
@@ -33,7 +33,9 @@
     "what are we doing?": "what are we doing?",
     "what are we doing?_desc": "Providing solutions and enhancing customer service performance by establishing contact centers equipped with global technologies and advanced cloud services for institutions and companies, along with a cloud communication system.",
     "follow our newest articles": "Follow our newest articles",
-    "keep in touch with us": "stay in touch with us"
+    "keep in touch with us": "stay in touch with us",
+    "Testimonials": "Testimonials",
+    "Some of our customer testimonials": "Some of our customer testimonials"
   },
 
   "serviceDetails": "service details",
