Refactor code structure for improved readability and maintainability

--- a/public/locale/ar/translation.json
+++ b/public/locale/ar/translation.json
@@ -8,11 +8,17 @@
   "nav_lang": "English",
   "shopping now": "تسوق الآن",
 
-  "hero_title": "حلول برمجية متكاملة",
-  "hero_subtitle": "لنجاح أعمالك",
+  
   "read more": "أطلع على المزيد",
-
+  "No data founded":"لم نستطيع العثور على اى بيانات ",
+  
   "homePage": {
+    "hero_title": "حلول برمجية متكاملة",
+    "hero_subtitle": "لنجاح أعمالك",
+    "hero_desc_part1": "نقدم حلولاً مبتكرة تساعد الشركات على النمو والتطور في العصر الرقمي",
+    "hero_desc_part2": "مع أحدث التقنيات وأفضل الممارسات في التطوير",
+    "request-quote-button": "أطلب عرض سعر",
+    "discover our services":"استكشف خدماتنا",
     "aboutHomeHeading": "أكثر ما يميزنا",
     "aboutSectionTitle": "يمكننا تقديم خدمات مميزة للعملاء",
     "aboutSectionDescription": "شركة تميز هي شركة تقنية رائدة في المملكة العربية السعودية والشرق الأوسط، تهدف إلى تقديم حلول تقنية ذكية تلبي احتياجات الشركات والمؤسسات والأفراد.",
@@ -83,11 +89,17 @@
 
   "ServicesSubTitle": "نحن نقدم أفضل جوده",
 
+  "faq": "الأسئلة الشائعة",
+    "faqPage": {
+    "headline1": "حافظ على أمان عملك",
+    "headline2": "وتأكد من توافره بدرجة عالية"
+  },
+
+
   "contact_us": "تواصل معنا",
   "email_placeholder": "البريد الإلكتروني",
   "email_description": "يرجى إدخال عنوان بريدك الإلكتروني لتلقي آخر الأخبار والتحديثات.",
   "quick_links": "روابط هامة",
-  "faq": "الأسئلة الشائعة",
   "company_description": "شركة تميــّز هــي شركه تقنيــة رائــدة في الملكــة العربيــة الســعودية والــشرق الاوســط، تهـدف إلى تقديـم حلـول تقنيـة ذكيـة تلـبي احتياجـات الـشركات والمؤسسـات والأفـراد",
   "copyright": "All Copyright 2024 by",
   "terms_condition": "الشروط والاحكام",
