--- a/public/locale/en/translation.json
+++ b/public/locale/en/translation.json
@@ -32,6 +32,7 @@
     "servicesDetailsButton": "Our Services Details",
     "projectsLabel": "Project",
     "clientsLabel": "Satisfied Clients",
+    "expertsLabel": "Experts",
     "aboutImageAlt": "About Tamayuz Company",
     "MoreThanOneHundredBrands": "More than 100 brands trust us",
     "what are we doing?": "what are we doing?",
