feat: Enhance website SEO and improve mobile navigation
- Updated index.html with improved title and meta tags for better SEO.
- Added new translations for mobile navigation in Arabic and English.
- Implemented a mobile navigation component with dynamic links and language toggle.
- Refactored Navbar to conditionally render based on device type.
- Introduced DarkModeToggle component for theme switching.
- Enhanced styling for mobile navigation and dark mode button.
- Updated AboutUs page to use Link component for navigation.
- Improved CSS styles for better responsiveness and visual consistency.

--- a/public/locale/ar/translation.json
+++ b/public/locale/ar/translation.json
@@ -8,6 +8,13 @@
   "nav_lang": "English",
   "shopping now": "تسوق الآن",
 
+  "mobile_navbar": "القائمة الرئيسية",
+  "mobile_solutions": "الحلول",
+  "mobile_services": "الخدمات",
+  "mobile_support": "الدعم",
+  "mobile_main": "الرئيسية",
+  "Language_nav":" E",
+
   "read more": "أطلع على المزيد",
   "No data founded": "لم نستطيع العثور على اى بيانات ",
 
