--- a/public/locale/en/translation.json
+++ b/public/locale/en/translation.json
@@ -8,6 +8,13 @@
   "nav_lang": "العربية",
   "shopping now": "Shop Now",
 
+  "mobile_navbar": "Main Menu",
+  "mobile_solutions": "solutions",
+  "mobile_services": "services",
+  "mobile_support": "support",
+  "mobile_main": "main",
+  "Language_nav": "ع",
+  
   "read more": "read more",
   "No data founded": "we couldn't find any data here",
 
