--- a/public/locale/ar/translation.json
+++ b/public/locale/ar/translation.json
@@ -50,20 +50,26 @@
     "Some of our customer testimonials": "بعض تقييمات عملائنا"
   },
 
-  "serviceDetails": "تفاصيل الخدمة",
+  
+  "articlePage": {
+    "heading": "اكتشف المعرفة... وكن دائمًا في المقدمة",
+    "subheading": "نشاركك المعرفة والخبرة لتبقى على اطلاع دائم بكل جديد",
+    "Top Articles": "اهم المقالات",
+    "article details": "تفاصيل المقال"
+  },
 
-  "Top Articles": "اهم المقالات",
-
-  "article details": "تفاصيل المقال",
-
-  "talk with us": "تحدث معنا",
-  "contact with us": "تواصل معنا",
-  "how can we help": "كيف يمكننا مساعدتك؟",
-  "send": "إرسال",
+  "supportPage": {
+    "heading": "معك دائمًا... لأن نجاحك يهمنا",
+    "subheading": "نحن هنا لمساعدتك في كل خطوة، بدعم سريع وفعّال على مدار الساعة",
+    "talk with us": "تحدث معنا",
+    "contact with us": "تواصل معنا",
+    "how can we help": "كيف يمكننا مساعدتك؟",
+    "send": "إرسال"
+  },
 
   "about tamuizz": "عن شركة تميز",
   "we present our services in the best way": "نلتزم بتقديم خدماتنا باعلى معايير الجوده",
-
+  
   "aboutSection": {
     "about-us-page-name": "من نحن",
     "why-are-we-special": "لماذا نحن مميزون؟",
@@ -85,14 +91,20 @@
   },
 
   "solutionPage": {
-    "solution_title": "نحن نقدم افضل الحلول"
+    "heading": "نبتكر الحلول... لنحقق التميز",
+    "subheading": "نبتكر حلولًا ذكية تواكب تطلعاتك وتدفع أعمالك نحو التميز",
+    "solution_title": "نحن نقدم افضل الحلول",
+    "solution details": "تفاصيل الحلول"
   },
-
-  "solution details": "تفاصيل الحلول",
-
+  
   "why are we special": "اكثر ما يميزنا",
-
-  "ServicesSubTitle": "نحن نقدم افضل جوده",
+  
+  "servicesPage": {
+    "heading": "خدمات تواكب طموحك، وتصنع الفارق",
+    "subheading": "نقدم مجموعة متكاملة من الخدمات المصممة لتلائم احتياجاتك بدقة",
+    "ServicesSubTitle": "نحن نقدم افضل جوده",
+    "serviceDetails": "تفاصيل الخدمة"
+  },
 
   "faq": "الاسئلة الشائعة",
   "faqPage": {
